# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

ohos_shared_library("ohswapfs") {
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  cflags = [
    "-fvisibility=hidden",
    "-fdata-sections",
    "-ffunction-sections",
    "-Oz",
  ]
  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Oz",
  ]
  include_dirs = [
    "./",
    "${file_api_path}/interfaces/kits/native/swapfs/include",
  ]

  sources = [ "./swapfs.c" ]
  deps = [ "${file_api_path}/interfaces/kits/native/swapfs:swapfs_native" ]
  external_deps = [ "hilog:libhilog" ]

  output_name = "ohswapfs"
  output_extension = "so"
  relative_install_dir = "ndk"
  part_name = "file_api"
  subsystem_name = "filemanagement"
}

ohos_ndk_library("libohswapfs") {
  ndk_description_file = "./libohswapfs.ndk.json"
  output_name = "ohswapfs"
  output_extension = "so"
  system_capability = "SystemCapability.FileManagement.File.Swapfs"
}

ohos_ndk_headers("oh_swapfs_header") {
  dest_dir = "$ndk_headers_out_dir/filemanagement/swapfs/"
  sources = [
    "./swapfs.h",
    "./swapfs_errcode.h",
  ]
}

group("group_swapfs") {
  deps = []
  if (file_api_feature_swapfs) {
    deps += [
      ":libohswapfs",
      ":oh_swapfs_header",
      ":ohswapfs",
      "${file_api_path}/interfaces/kits/native/swapfs:swapfs_native",
    ]
  }
}
