# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

config("swapfs_native_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "${file_api_path}/interfaces/kits/c/swapfs",
    "${utils_path}/filemgmt_libhilog",
  ]
}

ohos_shared_library("swapfs_native") {
  branch_protector_ret = "pac_ret"
  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  cflags = [
    "-fvisibility=hidden",
    "-fdata-sections",
    "-ffunction-sections",
    "-Oz",
  ]
  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Oz",
  ]

  sources = [
    "src/swapfs_c_api.cpp",
    "src/swapfs_err_mapper.cpp",
    "src/swapfs_manager.cpp",
    "src/swapfs_proxy_control.cpp",
    "src/swapfs_session_cleaner.cpp",
    "src/swapfs_sync_io_engine.cpp",
    "src/swapfs_uring_read_engine.cpp",
  ]

  defines = []
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
    "storage_service:storage_manager_sa_proxy",
  ]
  if (file_api_feature_hyperaio) {
    defines += [ "SWAPFS_USE_LIBURING" ]
    external_deps += [
      "ipc:ipc_single",
      "liburing",
    ]
  }

  deps = [ "${utils_path}/filemgmt_libhilog" ]

  public_configs = [ ":swapfs_native_config" ]

  innerapi_tags = [ "platformsdk" ]
  part_name = "file_api"
  subsystem_name = "filemanagement"
}
