# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

ohos_unittest("class_atomicfile_test") {
  module_out_path = "file_api/file_api"

  sources = [
    "${file_api_path}/interfaces/kits/js/src/common/file_helper/fd_guard.cpp",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_atomicfile/atomicfile_n_exporter.cpp",
    "${file_api_path}/interfaces/test/unittest/class_atomicfile/mock/atomicfile_mock.cpp",
    "${file_api_path}/interfaces/test/unittest/class_atomicfile/atomicfile_mock_test.cpp",
  ]

  include_dirs = [
    "${file_api_path}/interfaces/kits/js/src/common",
    "${file_api_path}/interfaces/kits/js/src/common/file_helper",
    "${file_api_path}/interfaces/kits/js/src/mod_fs",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/class_atomicfile",
    "${file_api_path}/interfaces/kits/js/src/mod_fs/properties",
    "${file_api_path}/interfaces/test/unittest/class_atomicfile/mock",
  ]

  use_exceptions = true

  deps = [
    "${file_api_path}/interfaces/kits/js:fs",
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
    "${utils_path}/filemgmt_libn:filemgmt_libn",
  ]

  external_deps = [
    "ability_base:zuri",
    "app_file_service:fileuri_native",
    "c_utils:utils",
    "c_utils:utilsbase",
    "dfs_service:distributed_file_daemon_kit_inner",
    "dfs_service:libdistributedfileutils",
    "googletest:gmock_main",
    "googletest:gtest_main",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  defines = [
    "private=public",
  ]
}