# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

ohos_unittest("class_file_test") {
  module_out_path = "filemanagement/file_api"

  resource_config_file = "../resource/ohos_test.xml"

  sources = [ "rust_test.cpp" ]

  include_dirs = [ "${file_api_path}/interfaces/kits/rust/include" ]

  deps = [
    "${file_api_path}/interfaces/kits/rust:rust_file",
    "//third_party/googletest:gtest_main",
  ]
}
