# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

ohos_unittest("file_watcher_test") {
  module_out_path = "filemanagement/file_api"

  resource_config_file = "../resource/ohos_test.xml"

  sources = [ "file_watcher_test.cpp" ]

  include_dirs = [
    "include",
    "//utils/system/safwk/native/include",
    "//commonlibrary/c_utils/base/include",
    "//foundation/filemanagement/file_api/interfaces/kits/js/src/common/napi",
    "//foundation/filemanagement/file_api/interfaces/kits/js/src/mod_fileio/class_watcher",
    "//third_party/libuv/include",
  ]

  deps = [
    "//foundation/filemanagement/file_api/interfaces/kits/js:fileio",
    "//third_party/googletest:gtest_main",
    "//foundation/arkui/napi:ace_napi",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "ipc:ipc_core",
  ]
}
