# Copyright (C) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

group("unittest") {
  testonly = true
  deps = [ ":filemgmt_libn_test" ]
}

ohos_unittest("filemgmt_libn_test") {
  module_out_path = "filemanagement/file_api"
  include_dirs = [ "./include" ]

  sources = [ "./src/n_class_test.cpp" ]

  deps = [
    "${utils_path}/filemgmt_libhilog:filemgmt_libhilog",
    "${utils_path}/filemgmt_libn:filemgmt_libn",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "c_utils:utilsbase",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]
}
