# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

ohos_unittest("hyperaio_test") {
  module_out_path = "file_api/file_api"

  resource_config_file = "../resource/ohos_test.xml"

  sources = [ 
    "hyperaio_test.cpp",
    "${file_api_path}/interfaces/kits/hyperaio/src/hyperaio.cpp",
    "${file_api_path}/interfaces/kits/hyperaio/src/hyperaio_trace.cpp"
  ]

  include_dirs = [
    "include",
    "${file_api_path}/interfaces/kits/hyperaio/include",
  ]

  deps = [
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "c_utils:utils",
    "c_utils:utilsbase",
    "ipc:ipc_core",
    "hilog:libhilog",
    "googletest:gtest_main",
    "hitrace:hitrace_meter"
  ]
  defines = [
    "private = public"
  ]
  if (file_api_feature_hyperaio) {
    defines += [ "HYPERAIO_USE_LIBURING" ]
  }
}
